syntax = "proto3";
package games.cheetah.relay.internal;

import public "external.types.proto";

service Relay {
  /**
    Создать комнату
   */
  rpc CreateRoom(games.cheetah.relay.types.RoomTemplate) returns(CreateRoomResponse);
  /**
    Присоединить пользователя к комнате, после этого комната будет ожидать udp соединения
   */
  rpc AttachUser(AttachUserRequest) returns(AttachUserResponse);
}

message CreateRoomResponse {
  uint64 id = 1;
}

message AttachUserRequest {
  uint64 room_id = 1;
  games.cheetah.relay.types.UserTemplate user = 2;
}

message  AttachUserResponse {
  uint32 user_id = 1;
  bytes private_key = 2;
}
